# riskengine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  market_hours.yaml  strategies.yaml
data/: sample_trades.csv
greeks/: black_scholes.cpp  black_scholes.h  implied_volatility.cpp
include/risk/: alert_manager.h  lot_matching.h  market_data.h  metrics_engine.h  pnl_calculator.h  position.h  position_tracker.h  risk_limits.h  timestamp.h  trade_journal.h  types.h
python/: CMakeLists.txt  pybind_module.cpp
python/risk/: __init__.py  client.py  replay.py
python/risk/dashboard/: app.py  websocket.py
python/risk/dashboard/panels/: exposure.py  limits.py  pnl_curve.py  positions.py  trade_log.py  var.py
scripts/: build.sh  run_tests.sh  seed_data.py  setup_python.sh
src/: alert_manager.cpp  lot_matching.cpp  main.cpp  market_data.cpp  metrics_engine.cpp  pnl_calculator.cpp  position_tracker.cpp  risk_limits.cpp  trade_journal.cpp
test/: CMakeLists.txt
tools/: export_tool.cpp  replay_tool.cpp  risk_cli.cpp
