[build-system]
requires = ["setuptools>=68.0", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "riskengine"
version = "0.1.0"
description = "Real-Time Risk Management & PnL Tracking"
requires-python = ">=3.10"
dependencies = [
    "plotly>=5.18",
    "dash>=2.14",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "click>=8.1",
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
risk-cli = "risk.client:cli"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
